[package]
name = "alloy-example"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.26", features = ["full"] }
anyhow = "1.0.99"
dotenv = "0.15.0"
reqwest = "0.12.23"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
